{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 52,
  "lineage": "ed19da19-348b-684f-7fc1-bad7799bb477",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:657349740669:instance/i-0ba2019406838104e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ba2019406838104e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "arsenal-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0038c40c0be488d8c",
            "private_dns": "ip-172-31-17-3.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.3",
            "public_dns": "ec2-54-164-20-184.compute-1.amazonaws.com",
            "public_ip": "54.164.20.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f9c1ddd73c82f5e0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "arsenal-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018d1e566b6d37d50",
            "tags": {
              "Name": "arsenal-web",
              "Project": "arsenal"
            },
            "tags_all": {
              "Name": "arsenal-web",
              "Project": "arsenal"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a8dd89be25aa732c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.arsenal-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "arsenal-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:657349740669:security-group/sg-0a8dd89be25aa732c",
            "description": "arsenal-sg",
            "egress": [],
            "id": "sg-0a8dd89be25aa732c",
            "ingress": [],
            "name": "arsenal-sg",
            "name_prefix": "",
            "owner_id": "657349740669",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "arsenal-sg"
            },
            "tags_all": {
              "Name": "arsenal-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8dfd4f8ad6e8253"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allowAllOutbound_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:657349740669:security-group-rule/sgr-024e9ef02f4ad7193",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-024e9ef02f4ad7193",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a8dd89be25aa732c",
            "security_group_rule_id": "sgr-024e9ef02f4ad7193",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.arsenal-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allowAllOutbound_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:657349740669:security-group-rule/sgr-083d40a69100b4c09",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-083d40a69100b4c09",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a8dd89be25aa732c",
            "security_group_rule_id": "sgr-083d40a69100b4c09",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.arsenal-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:657349740669:security-group-rule/sgr-0591d5740a00c190b",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 80,
            "id": "sgr-0591d5740a00c190b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a8dd89be25aa732c",
            "security_group_rule_id": "sgr-0591d5740a00c190b",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.arsenal-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_from_my_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:657349740669:security-group-rule/sgr-0bc5e21dbae7cf757",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0bc5e21dbae7cf757",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a8dd89be25aa732c",
            "security_group_rule_id": "sgr-0bc5e21dbae7cf757",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.arsenal-sg"
          ]
        }
      ]
    }
  ]
}